[ iOS Debug ] 12 TestWebKitAPI.WebKitLegacy. tests are crashing https://bugs.webkit.org/show_bug.cgi?id=229250

Reviewed by Wenson Hsieh.

Disable the assertion when Web Thread is enabled for now.

* wtf/CheckedRef.h:
(WTF::SingleThreadIntegralWrapper::assertThread const):


Canonical link: https://commits.webkit.org/240654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281217 268f45cc-cd09-0410-ab3c-d52691b4dbfc